<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent="0.3"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuidelineTop"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintWidth_percent="0.37"
        app:srcCompat="@drawable/photo" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_ned"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/imageBackground"
        app:layout_constraintBottom_toTopOf="@id/textViewSurename"
       />

    <TextView
        android:id="@+id/textViewSurename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_stark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/imageViewPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintBottom_toBottomOf="@id/imageViewPhoto"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/textViewBiography"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/son_of_winterfell_n_n_he_was_believing_that_winter_is_coming_n_n_had_a_friend_bobby_alkoenthusiast_and_king_n_n_sometimes_they_participated_in_wars_to_have_fun_and_get_iron_throne_n_n_died_so_far_from_motherland_due_to_game_of_thrones"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto"
        app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBiography"
        app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintVertical_chainStyle="packed"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>